--- a/metadata.yaml
+++ b/metadata.yaml
@@ -45,6 +45,7 @@ subjects:
 - !lcsh 'Happiness -- Early works to 1800'
 - !lcsh 'Theology -- Early works to 1800'
 - !lcsh 'Gods, Roman -- Early works to 1800'
+- GITenberg
 title: 'Cicero''s Tusculan Disputations
 
   Also, Treatises On The Nature Of The Gods, And On The Commonwealth'
